feat: implement notification system with email support and configuration, optimize query to update profile